k8s/istiorule/apigateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: oxygensample-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.oxygen-eshopsample.com
    - www.oxygen-eshopsample.com
