k8s/istiorule/businessapigateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apigateway
spec:
  hosts:
  - api.oxygen-eshopsample.com
  gateways:
  - oxygensample-gateway
  http:
  - match:
    - headers:
        canaryver:
          exact: v2
    route:
    - destination:
        host: apigateway
        subset: v2
    timeout: 30s
  - route:
    -  destination:
        host: apigateway
        subset: v1
    timeout: 30s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: apigateway
spec:
 host: apigateway
 trafficPolicy:
   loadBalancer:
     simple: RANDOM
   connectionPool:
     tcp:
       maxConnections: 1024
     http:
       http1MaxPendingRequests: 1024
       maxRequestsPerConnection: 1024
   outlierDetection:
     consecutiveErrors: 5
     interval: 10s
     baseEjectionTime: 3m
     maxEjectionPercent: 50
 subsets:
 - name: v1
   labels:
     version: v1
 - name: v2
   labels:
     version: v2
