k8s/istiorule/frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - www.oxygen-eshopsample.com
  gateways:
  - oxygensample-gateway
  http:
  - route:
    -  destination:
        host: frontend
