k8s/istiorule/goodsservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goodsservice
spec:
  hosts:
  - goodsservice
  http:
  - route:
    - destination:
        host: goodsservice
        subset: v1
    timeout: 20s
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: 504,5xx,gateway-error,connect-failure,refused-stream
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: goodsservice
spec:
 host: goodsservice
 subsets:
 - name: v1
   labels:
     version: v1
