k8s/istiorule/orderservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orderservice
spec:
  hosts:
  - orderservice
  http:
  - route:
    - destination:
        host: orderservice
        subset: v1
    timeout: 20s
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: 504,5xx,gateway-error,connect-failure,refused-stream
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: orderservice
spec:
 host: orderservice
 subsets:
 - name: v1
   labels:
     version: v1
