k8s/istiorule/tradeservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tradeservice
spec:
  hosts:
  - tradeservice
  http:
  - route:
    - destination:
        host: tradeservice
        subset: v1
    timeout: 20s
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: 504,5xx,gateway-error,connect-failure,refused-stream
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: tradeservice
spec:
 host: tradeservice
 subsets:
 - name: v1
   labels:
     version: v1
