k8s/istiorule/userservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userservice
spec:
  hosts:
  - userservice
  http:
  - match:
    - headers:
        canaryver:
          exact: v2
    route:
    - destination:
        host: userservice
        subset: v2
    timeout: 20s
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: 504,5xx,gateway-error,connect-failure,refused-stream
  - route:
    -  destination:
        host: userservice
        subset: v1
    timeout: 20s
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: 504,5xx,gateway-error,connect-failure,refused-stream
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: userservice
spec:
 host: userservice
 subsets:
 - name: v1
   labels:
     version: v1
 - name: v2
   labels:
     version: v2
